# nvidia-more-battery

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
etc/: power_mon
nvidia_more_battery/: __main__.py  _version.py  conftest.py  logging.py  power_mon.py  test_main.py  test_version.py  tmpfiles.py  user.py
nvidia_more_battery/services/: gsettings.py  modprobe.py  test_tmpfiles.py  tmpfiles.py
nvidia_more_battery/utils/: args.py  logging.py  pci.py  test_args.py  test_logging.py  test_pci.py  test_user.py  user.py
