[project]
name = "nvidia-more-battery"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[project.urls]
Homepage = "https://github.com/klmcwhirter/nvidia-more-battery"
Repository = "https://github.com/klmcwhirter/nvidia-more-battery"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
is-purelib = true

[tool.pdm.version]
source = "scm"
tag_regex = "^(?:[\\w-]+-)?(?P<version>[vV]?\\d+(?:\\.\\d+){0,2})"
# version_format coming soon - https://github.com/pdm-project/pdm-backend/commit/4f20cfd51928b9e4d8b1a941630865755b569b19
# version_format = "nvidia_more_battery.version:format_version" 
write_to = "nvidia_more_battery/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.scripts]
_.env = { NVB = "nvidia_more_battery" }
create.shell = "pdm venv remove -y in-project; pdm install"
clean.shell = "for d in ${TO_DEL};do echo $d;rm -fr $d;done"
clean.env = { TO_DEL = ".coverage .mypy_cache .pdm-build __pycache__ .pytest_cache .tox dist" }
clean.help = "Clean environment"

start.cmd = "python -m ${NVB}"
enable.shell = "sudo python -m ${NVB} enable --verbose"
enable.help = "Enable nvidia limiting feature; reboot is required"
disable.shell = "sudo python -m ${NVB} disable --verbose"
disable.help = "Disable nvidia limiting feature and rescan PCI bus"
has_nvidia.composite = ["start has_nvidia"]
has_nvidia.help = "Report nvidia is available or not - outputs nvidia or no-nvidia"

power.cmd = "python -m ${NVB}.power_mon"
power.help = "Report battery power metrics"

flake8.cmd = "flake8 ${NVB}"
mypy.cmd = "mypy -p ${NVB}"
test.cmd = "pytest"
tox.cmd = "tox"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "tox>=4.14.1",
    "tox-gh-actions>=3.2.0",
    "tox-pdm>=0.7.2",
]

[tool.autopep8]
max-doc-length = 140
max_line_length = 140

[tool.pytest.ini_options]
addopts = "--cov=nvidia_more_battery"

[tool.mypy]
mypy_path = "nvidia_more_battery"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
